<resources>
    <string name="app_name">Rent a car</string>
    <string name="lblCorreo">Correo Electronico</string>
    <string name="lblPassword">Contraseña</string>
    <string name="btnInciar">Iniciar Sesion</string>
    <string name="btnRegistrarse">Registrarse</string>
    <string name="lblTitulo">Alquiler de autos en Costa Rica</string>
    <string name="lblNombre">Nombre</string>
    <string name="lblIdentificacion">Identificacion</string>
    <string name="lblTelefono">Telefono</string>
    <string name="lblRegistroTitulo">Registro</string>
    <string name="title_activity_feedcarros">Feedcarros</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="noLogin">Credenciales invalidos</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_registro">RegistroActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="ms_FaltanValores">Faltan valores</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>