<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_carros">

    <fragment
        android:id="@+id/nav_carros"
        android:name="com.example.rentacarproyecto.ui.carros.CarrosFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_carros" >
        <action
            android:id="@+id/action_nav_carros_to_nav_carros_details"
            app:destination="@id/nav_carros_details" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.rentacarproyecto.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.rentacarproyecto.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_carros_details"
        android:name="com.example.rentacarproyecto.ui.carros.CarrosDetailsFragment"
        android:label="CarrosDetailsFragment" >

        <argument
            android:name="carroArgs"
            app:argType="com.example.rentacarproyecto.model.Carro" />
    </fragment>
</navigation>