<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llhoriz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232B53"
    android:orientation="horizontal"
    android:padding="20dp"
    tools:context=".RegistroActivity">

    <TextView
        android:id="@+id/lblTitular2"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="175dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:text="@string/lblRegistroTitulo"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textColorHint="#989897"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNombre"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#252524"
        android:ems="10"
        android:hint="@string/lblNombre"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#989897"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTitular2" />

    <EditText
        android:id="@+id/txtIdentificacion"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#252524"
        android:ems="10"
        android:hint="@string/lblIdentificacion"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#989897"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <EditText
        android:id="@+id/txtCorreo"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#252524"
        android:ems="10"
        android:hint="@string/lblCorreo"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#989897"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIdentificacion" />

    <EditText
        android:id="@+id/txtPasswordRegistro"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#252524"
        android:ems="10"
        android:hint="@string/lblPassword"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#989897"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCorreo" />

    <EditText
        android:id="@+id/txtTelefono"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#252524"
        android:ems="10"
        android:hint="@string/lblTelefono"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#989897"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordRegistro" />

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="148dp"
        android:layout_height="35dp"
        android:layout_marginTop="36dp"
        android:scrollY="100dp"
        android:text="@string/btnRegistrarse"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefono" />

    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        android:scrollY="100dp"
        android:text="@string/btnInciar"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistrarse" />
</androidx.constraintlayout.widget.ConstraintLayout>